# matrix-determinant

./: CMakeLists.txt  README.md  array_memory.c  array_memory.h  client.c  keyboard.c  keyboard.h  server.c  server_output.c  server_output.h
